fix-overflow

--- a/app.css
+++ b/app.css
@@ -384,3 +384,13 @@ span{
 h1, h2, h3{
     font-family: 'Bree Serif', serif !important;
 }
+
+
+
+    @media (max-width: 599px) {
+        .conatiner, .meet-us, .available-jobs, .carousel-container, .footer{
+            padding: 30px;
+            overflow-x: hidden;
+    }
+
+}
